--- a/.harness/mypipeline.yaml
+++ b/.harness/mypipeline.yaml
@@ -29,6 +29,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: harieshhak/harness-repo
         ports:
         - containerPort: 80
