--- a/.harness/mypipeline.yaml
+++ b/.harness/mypipeline.yaml
@@ -29,6 +29,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: harieshhak/harness-repo
+        image: nginx
         ports:
         - containerPort: 80
