--- a/.harness/mypipeline.yaml
+++ b/.harness/mypipeline.yaml
@@ -14,7 +14,7 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: my-nginx
+  name: nginx-hari
   labels:
     app: nginx
 spec:
@@ -29,6 +29,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.14.2
+        image: harieshhak/harness-repo
         ports:
         - containerPort: 80
